--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.30.2",
     "@prisma/client": "^6.14.0",
+    "axios": "^1.11.0",
     "cloudinary": "^2.7.0",
     "next": "15.4.6",
     "next-cloudinary": "^6.16.0",
