--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.30.2",
-    "@prisma/client": "^6.14.0",
+    "@prisma/client": "^6.15.0",
+    "@prisma/extension-accelerate": "^2.0.2",
     "axios": "^1.11.0",
     "cloudinary": "^2.7.0",
     "next": "15.4.6",
@@ -27,7 +28,7 @@
     "daisyui": "^5.0.50",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
-    "prisma": "^6.14.0",
+    "prisma": "^6.15.0",
     "tailwindcss": "^4",
     "tsx": "^4.20.4",
     "typescript": "^5.9.2"
