--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@prisma/extension-accelerate": "^2.0.2",
     "axios": "^1.11.0",
     "cloudinary": "^2.7.0",
+    "dayjs": "^1.11.15",
+    "filesize": "^11.0.2",
+    "lucide-react": "^0.542.0",
     "next": "15.4.6",
     "next-cloudinary": "^6.16.0",
     "react": "19.1.0",
